Successfully fix the signature does not match error